--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo-app",
   "version": "0.0.0",
   "license": "MIT",
+  "prestart": "ng build --prod && ngc",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -20,8 +21,21 @@
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/platform-server": "^5.2.4",
     "@angular/router": "^5.2.0",
+    "@nguniversal/express-engine": "^5.0.0-beta.5",
+    "ag-grid": "^16.0.1",
+    "ag-grid-angular": "^16.0.0",
+    "angular2-datatable": "^0.6.0",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "jquery": "^3.3.1",
+    "loadash": "^1.0.0",
+    "popper.js": "^1.12.9",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -31,8 +45,10 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.0",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "cpy-cli": "^1.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -41,7 +57,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
+    "ts-node": "^4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
   }
