--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,7 +7,8 @@
     "types": []
   },
   "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+    "server.ts",
+    "**/*.spec.ts",
+    "test.ts"
   ]
 }
